fixed the footer section on mobile

--- a/src/app/ui/components/aboutsections/AboutSection.css
+++ b/src/app/ui/components/aboutsections/AboutSection.css
@@ -117,7 +117,7 @@
     height: 200px;
   }
   .history {
-    padding: 20px 0px;
+    padding: 15px 0px;
     text-align: left;
   }
   .our-history {
